src/patito/generated/PatitoParser.py
# Generated from src/patito/Patito.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PatitoParser ( Parser ):

    grammarFileName = "Patito.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'program'", "'main'", "'end'", 
                     "'if'", "'else'", "'while'", "'do'", "'print'", "'var'", 
                     "'void'", "'int'", "'float'", "'='", "'+'", "'-'", 
                     "'*'", "'/'", "'!='", "'<'", "'>'", "','", "':'", "';'", 
                     "'('", "')'", "'{'", "'}'", "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "WS", "PROGRAM", "MAIN", "END", "IF", 
                      "ELSE", "WHILE", "DO", "PRINT", "VAR", "VOID", "INT_TYPE", 
                      "FLOAT_TYPE", "ASSIGN", "PLUS", "MINUS", "MUL", "DIV", 
                      "NEQ", "LT", "GT", "COMMA", "COLON", "SEMI", "LP", 
                      "RP", "LB", "RB", "LBR", "RBR", "ID", "INT_LIT", "FLOAT_LIT", 
                      "STRING_LIT" ]

    RULE_start = 0
    RULE_programa = 1
    RULE_programa_p = 2
    RULE_programa_pp = 3
    RULE_programa_ppp = 4
    RULE_vars = 5
    RULE_vars_p = 6
    RULE_vars_pp = 7
    RULE_vars_ppp = 8
    RULE_funcs = 9
    RULE_funcs_p = 10
    RULE_funcs_pp = 11
    RULE_funcs_ppp = 12
    RULE_funcs_pppp = 13
    RULE_body = 14
    RULE_body_p = 15
    RULE_body_pp = 16
    RULE_condition = 17
    RULE_condition_p = 18
    RULE_exp = 19
    RULE_exp_p = 20
    RULE_termino = 21
    RULE_termino_p = 22
    RULE_factor = 23
    RULE_factor_p = 24
    RULE_factor_pp = 25
    RULE_factor_ppp = 26
    RULE_expresion = 27
    RULE_expresion_p = 28
    RULE_print_stmt = 29
    RULE_print_p = 30
    RULE_print_pp = 31
    RULE_fcall = 32
    RULE_fcall_p = 33
    RULE_fcall_pp = 34
    RULE_statement = 35
    RULE_assign = 36
    RULE_type = 37
    RULE_cte = 38
    RULE_cycle = 39

    ruleNames =  [ "start", "programa", "programa_p", "programa_pp", "programa_ppp", 
                   "vars", "vars_p", "vars_pp", "vars_ppp", "funcs", "funcs_p", 
                   "funcs_pp", "funcs_ppp", "funcs_pppp", "body", "body_p", 
                   "body_pp", "condition", "condition_p", "exp", "exp_p", 
                   "termino", "termino_p", "factor", "factor_p", "factor_pp", 
                   "factor_ppp", "expresion", "expresion_p", "print_stmt", 
                   "print_p", "print_pp", "fcall", "fcall_p", "fcall_pp", 
                   "statement", "assign", "type", "cte", "cycle" ]

    EOF = Token.EOF
    WS=1
    PROGRAM=2
    MAIN=3
    END=4
    IF=5
    ELSE=6
    WHILE=7
    DO=8
    PRINT=9
    VAR=10
    VOID=11
    INT_TYPE=12
    FLOAT_TYPE=13
    ASSIGN=14
    PLUS=15
    MINUS=16
    MUL=17
    DIV=18
    NEQ=19
    LT=20
    GT=21
    COMMA=22
    COLON=23
    SEMI=24
    LP=25
    RP=26
    LB=27
    RB=28
    LBR=29
    RBR=30
    ID=31
    INT_LIT=32
    FLOAT_LIT=33
    STRING_LIT=34

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class StartContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa(self):
            return self.getTypedRuleContext(PatitoParser.ProgramaContext,0)


        def EOF(self):
            return self.getToken(PatitoParser.EOF, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_start

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStart" ):
                listener.enterStart(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStart" ):
                listener.exitStart(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStart" ):
                return visitor.visitStart(self)
            else:
                return visitor.visitChildren(self)




    def start(self):

        localctx = PatitoParser.StartContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_start)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.programa()
            self.state = 81
            self.match(PatitoParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PROGRAM(self):
            return self.getToken(PatitoParser.PROGRAM, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def programa_p(self):
            return self.getTypedRuleContext(PatitoParser.Programa_pContext,0)


        def programa_pp(self):
            return self.getTypedRuleContext(PatitoParser.Programa_ppContext,0)


        def MAIN(self):
            return self.getToken(PatitoParser.MAIN, 0)

        def body(self):
            return self.getTypedRuleContext(PatitoParser.BodyContext,0)


        def END(self):
            return self.getToken(PatitoParser.END, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma" ):
                return visitor.visitPrograma(self)
            else:
                return visitor.visitChildren(self)




    def programa(self):

        localctx = PatitoParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_programa)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 83
            self.match(PatitoParser.PROGRAM)
            self.state = 84
            self.match(PatitoParser.ID)
            self.state = 85
            self.match(PatitoParser.SEMI)
            self.state = 86
            self.programa_p()
            self.state = 87
            self.programa_pp()
            self.state = 88
            self.match(PatitoParser.MAIN)
            self.state = 89
            self.body()
            self.state = 90
            self.match(PatitoParser.END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Programa_pContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_(self):
            return self.getTypedRuleContext(PatitoParser.VarsContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_programa_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma_p" ):
                listener.enterPrograma_p(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma_p" ):
                listener.exitPrograma_p(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma_p" ):
                return visitor.visitPrograma_p(self)
            else:
                return visitor.visitChildren(self)




    def programa_p(self):

        localctx = PatitoParser.Programa_pContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_programa_p)
        try:
            self.state = 94
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 92
                self.vars_()
                pass
            elif token in [3, 11]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Programa_ppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def programa_ppp(self):
            return self.getTypedRuleContext(PatitoParser.Programa_pppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_programa_pp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma_pp" ):
                listener.enterPrograma_pp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma_pp" ):
                listener.exitPrograma_pp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma_pp" ):
                return visitor.visitPrograma_pp(self)
            else:
                return visitor.visitChildren(self)




    def programa_pp(self):

        localctx = PatitoParser.Programa_ppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_programa_pp)
        try:
            self.state = 98
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 96
                self.programa_ppp()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)

                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Programa_pppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcs(self):
            return self.getTypedRuleContext(PatitoParser.FuncsContext,0)


        def programa_ppp(self):
            return self.getTypedRuleContext(PatitoParser.Programa_pppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_programa_ppp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma_ppp" ):
                listener.enterPrograma_ppp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma_ppp" ):
                listener.exitPrograma_ppp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPrograma_ppp" ):
                return visitor.visitPrograma_ppp(self)
            else:
                return visitor.visitChildren(self)




    def programa_ppp(self):

        localctx = PatitoParser.Programa_pppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_programa_ppp)
        try:
            self.state = 104
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 100
                self.funcs()
                self.state = 101
                self.programa_ppp()
                pass
            elif token in [3]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(PatitoParser.VAR, 0)

        def vars_p(self):
            return self.getTypedRuleContext(PatitoParser.Vars_pContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_vars

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars" ):
                listener.enterVars(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars" ):
                listener.exitVars(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars" ):
                return visitor.visitVars(self)
            else:
                return visitor.visitChildren(self)




    def vars_(self):

        localctx = PatitoParser.VarsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_vars)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(PatitoParser.VAR)
            self.state = 107
            self.vars_p()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_pContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def vars_pp(self):
            return self.getTypedRuleContext(PatitoParser.Vars_ppContext,0)


        def COLON(self):
            return self.getToken(PatitoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PatitoParser.TypeContext,0)


        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def vars_ppp(self):
            return self.getTypedRuleContext(PatitoParser.Vars_pppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_vars_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_p" ):
                listener.enterVars_p(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_p" ):
                listener.exitVars_p(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars_p" ):
                return visitor.visitVars_p(self)
            else:
                return visitor.visitChildren(self)




    def vars_p(self):

        localctx = PatitoParser.Vars_pContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_vars_p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            self.match(PatitoParser.ID)
            self.state = 110
            self.vars_pp()
            self.state = 111
            self.match(PatitoParser.COLON)
            self.state = 112
            self.type_()
            self.state = 113
            self.match(PatitoParser.SEMI)
            self.state = 114
            self.vars_ppp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_ppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(PatitoParser.COMMA, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def vars_pp(self):
            return self.getTypedRuleContext(PatitoParser.Vars_ppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_vars_pp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_pp" ):
                listener.enterVars_pp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_pp" ):
                listener.exitVars_pp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars_pp" ):
                return visitor.visitVars_pp(self)
            else:
                return visitor.visitChildren(self)




    def vars_pp(self):

        localctx = PatitoParser.Vars_ppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_vars_pp)
        try:
            self.state = 120
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 116
                self.match(PatitoParser.COMMA)
                self.state = 117
                self.match(PatitoParser.ID)
                self.state = 118
                self.vars_pp()
                pass
            elif token in [23]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Vars_pppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_p(self):
            return self.getTypedRuleContext(PatitoParser.Vars_pContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_vars_ppp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVars_ppp" ):
                listener.enterVars_ppp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVars_ppp" ):
                listener.exitVars_ppp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVars_ppp" ):
                return visitor.visitVars_ppp(self)
            else:
                return visitor.visitChildren(self)




    def vars_ppp(self):

        localctx = PatitoParser.Vars_pppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_vars_ppp)
        try:
            self.state = 124
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 122
                self.vars_p()
                pass
            elif token in [3, 11, 27]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VOID(self):
            return self.getToken(PatitoParser.VOID, 0)

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def LP(self):
            return self.getToken(PatitoParser.LP, 0)

        def funcs_p(self):
            return self.getTypedRuleContext(PatitoParser.Funcs_pContext,0)


        def RP(self):
            return self.getToken(PatitoParser.RP, 0)

        def LBR(self):
            return self.getToken(PatitoParser.LBR, 0)

        def funcs_pppp(self):
            return self.getTypedRuleContext(PatitoParser.Funcs_ppppContext,0)


        def body(self):
            return self.getTypedRuleContext(PatitoParser.BodyContext,0)


        def RBR(self):
            return self.getToken(PatitoParser.RBR, 0)

        def SEMI(self):
            return self.getToken(PatitoParser.SEMI, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_funcs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs" ):
                listener.enterFuncs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs" ):
                listener.exitFuncs(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs" ):
                return visitor.visitFuncs(self)
            else:
                return visitor.visitChildren(self)




    def funcs(self):

        localctx = PatitoParser.FuncsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_funcs)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            self.match(PatitoParser.VOID)
            self.state = 127
            self.match(PatitoParser.ID)
            self.state = 128
            self.match(PatitoParser.LP)
            self.state = 129
            self.funcs_p()
            self.state = 130
            self.match(PatitoParser.RP)
            self.state = 131
            self.match(PatitoParser.LBR)
            self.state = 132
            self.funcs_pppp()
            self.state = 133
            self.body()
            self.state = 134
            self.match(PatitoParser.RBR)
            self.state = 135
            self.match(PatitoParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcs_pContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def funcs_pp(self):
            return self.getTypedRuleContext(PatitoParser.Funcs_ppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_funcs_p

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs_p" ):
                listener.enterFuncs_p(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs_p" ):
                listener.exitFuncs_p(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs_p" ):
                return visitor.visitFuncs_p(self)
            else:
                return visitor.visitChildren(self)




    def funcs_p(self):

        localctx = PatitoParser.Funcs_pContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_funcs_p)
        try:
            self.state = 139
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [31]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.funcs_pp()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcs_ppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PatitoParser.ID, 0)

        def COLON(self):
            return self.getToken(PatitoParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(PatitoParser.TypeContext,0)


        def funcs_ppp(self):
            return self.getTypedRuleContext(PatitoParser.Funcs_pppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_funcs_pp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs_pp" ):
                listener.enterFuncs_pp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs_pp" ):
                listener.exitFuncs_pp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs_pp" ):
                return visitor.visitFuncs_pp(self)
            else:
                return visitor.visitChildren(self)




    def funcs_pp(self):

        localctx = PatitoParser.Funcs_ppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_funcs_pp)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 141
            self.match(PatitoParser.ID)
            self.state = 142
            self.match(PatitoParser.COLON)
            self.state = 143
            self.type_()
            self.state = 144
            self.funcs_ppp()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcs_pppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(PatitoParser.COMMA, 0)

        def funcs_pp(self):
            return self.getTypedRuleContext(PatitoParser.Funcs_ppContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_funcs_ppp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs_ppp" ):
                listener.enterFuncs_ppp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs_ppp" ):
                listener.exitFuncs_ppp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs_ppp" ):
                return visitor.visitFuncs_ppp(self)
            else:
                return visitor.visitChildren(self)




    def funcs_ppp(self):

        localctx = PatitoParser.Funcs_pppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_funcs_ppp)
        try:
            self.state = 149
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [22]:
                self.enterOuterAlt(localctx, 1)
                self.state = 146
                self.match(PatitoParser.COMMA)
                self.state = 147
                self.funcs_pp()
                pass
            elif token in [26]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Funcs_ppppContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def vars_(self):
            return self.getTypedRuleContext(PatitoParser.VarsContext,0)


        def getRuleIndex(self):
            return PatitoParser.RULE_funcs_pppp

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncs_pppp" ):
                listener.enterFuncs_pppp(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncs_pppp" ):
                listener.exitFuncs_pppp(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncs_pppp" ):
                return visitor.visitFuncs_pppp(self)
            else:
                return visitor.visitChildren(self)




    def funcs_pppp(self):

        localctx = PatitoParser.Funcs_ppppContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_funcs_pppp)
        try:
            self.state = 153
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [10]:
                self.enterOuterAlt(localctx, 1)
                self.state = 151
                self.vars_()
                pass
            elif token in [27]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BodyContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(PatitoParser.LB, 0)

        def body_p(self):
            return self.getTypedRuleContext(PatitoParser.Body_pContext,0)


        def RB(self):
            return self.getToken(PatitoParser.RB, 0)

        def getRuleIndex(self):
            return PatitoParser.RULE_body

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBody" ):
                listener.enterBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBody" ):
                listener.exitBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBody" ):
                return visitor.visitBody(self)
            else:
                return visitor.visitChildren(self)




    def body(self):
